bk_ida/gobmkida/g3/safe_move
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/safe_move/src/engine/reading.c:5003:7: error: use of undeclared identifier 'initialized_0'
if ( !initialized_0 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/safe_move/src/engine/reading.c:5008:12: error: expected expression
*( _OWORD *)v2 = -1LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/safe_move/src/engine/reading.c:5008:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v2 = -1LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/safe_move/src/engine/reading.c:5012:1: error: use of undeclared identifier 'initialized_0'
initialized_0 = 1; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/safe_move/src/obj/1/reading.o] Error 1
